# re.bzl

./: .gitignore  BUILD.bazel  GEMINI.md  MODULE.bazel  README.md  development.md  re.bzl
.bcr/: metadata.template.json
.github/workflows/: release.yaml  release_prep.sh
docs/: BUILD.bazel  MODULE.bazel  docs.bzl  re.md
lib/: BUILD.bazel  re.bzl
lib/benchmarks/: BUILD.bazel  benchmark_test.bzl  benchmarks.bzl
lib/private/: BUILD.bazel  compiler.bzl  re.bzl  vm.bzl
lib/tests/: BUILD.bazel  test_anchors_flags.bzl  test_api.bzl  test_core.bzl  test_escape.bzl  test_groups.bzl  test_optimization.bzl  test_quantifiers.bzl  test_unicode.bzl  utils.bzl
lib/tests/benchmarks/: BUILD.bazel  benchmark_test.bzl  benchmarks.bzl
re/: BUILD.bazel  re.bzl
re/private/: BUILD.bazel  compiler.bzl  constants.bzl  re.bzl  vm.bzl
re/tests/: BUILD.bazel  test_anchors.bzl  test_anchors_flags.bzl  test_api.bzl  test_core.bzl  test_escape.bzl  test_groups.bzl  test_json_unicode.bzl  test_optimization.bzl  test_quantifiers.bzl  test_root_import.bzl  test_ungreedy_opt.bzl  test_unicode.bzl  test_verbose.bzl  utils.bzl
re/tests/benchmarks/: BUILD.bazel  benchmark_test.bzl  benchmarks.bzl
tests/: test_anchors_flags.star  test_api.star  test_core.star  test_escape.star  test_groups.star  test_lookaround.star  test_quantifiers.star  test_re2_compat.star  tests.star  utils.star
