load("@bazel_lib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "re",
    srcs = ["re.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//re/private:constants",
        "//re/private:re",
    ],
)

filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
