"""Build rules for documentation."""

load("@bazel_lib//lib:diff_test.bzl", "diff_test")
load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")
load("@rules_java//java:java_binary.bzl", "java_binary")

java_binary(
    name = "renderer",
    main_class = "com/google/devtools/build/stardoc/renderer/RendererMain",
    runtime_deps = ["@stardoc-prebuilt//jar"],
)

stardoc(
    name = "re_doc",
    out = "re_generated.md",
    input = "@re.bzl//:re.bzl",
    renderer = ":renderer",
    deps = ["@re.bzl//:re"],
)

diff_test(
    name = "re_test",
    file1 = "re.md",
    file2 = "re_generated.md",
)

write_source_files(
    name = "update",
    files = {
        "re.md": "re_generated.md",
    },
)
