load("@bazel_lib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "re",
    srcs = ["re.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//re/private:re",
    ],
)

filegroup(
    name = "all_srcs",
    srcs = glob(["**/*.bzl"]) + [
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)
