load("@bazel_lib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//re:__subpackages__"])

exports_files(["re.bzl"])

bzl_library(
    name = "constants",
    srcs = ["constants.bzl"],
    visibility = ["//re:__subpackages__"],
)

bzl_library(
    name = "compiler",
    srcs = ["compiler.bzl"],
    visibility = ["//re:__subpackages__"],
    deps = [
        ":constants",
    ],
)

bzl_library(
    name = "vm",
    srcs = ["vm.bzl"],
    visibility = ["//re:__subpackages__"],
    deps = [
        ":constants",
    ],
)

bzl_library(
    name = "re",
    srcs = ["re.bzl"],
    visibility = ["//re:__subpackages__"],
    deps = [
        ":compiler",
        ":vm",
    ],
)
