load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//re/tests:test_anchors.bzl", "anchors_test")
load("//re/tests:test_api.bzl", "api_test")
load("//re/tests:test_core.bzl", "core_test")
load("//re/tests:test_escape.bzl", "escape_test")
load("//re/tests:test_flags.bzl", "flags_test")
load("//re/tests:test_groups.bzl", "groups_test")
load("//re/tests:test_optimization.bzl", "optimization_test")
load("//re/tests:test_quantifiers.bzl", "quantifiers_test")
load("//re/tests:test_root_import.bzl", "root_import_test")
load("//re/tests:test_ungreedy_opt.bzl", "ungreedy_opt_test")
load("//re/tests:test_unicode.bzl", "unicode_test")
load("//re/tests:test_verbose.bzl", "verbose_test")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "utils",
    srcs = ["utils.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//re",
    ],
)

anchors_test(name = "anchors_test")

api_test(name = "api_test")

core_test(name = "core_test")

escape_test(name = "escape_test")

groups_test(name = "groups_test")

quantifiers_test(name = "quantifiers_test")

optimization_test(name = "optimization_test")

unicode_test(name = "unicode_test")

root_import_test(name = "root_import_test")

verbose_test(name = "verbose_test")

flags_test(name = "flags_test")

ungreedy_opt_test(name = "ungreedy_opt_test")

test_suite(
    name = "all_tests",
    tests = [
        ":anchors_test",
        ":api_test",
        ":core_test",
        ":escape_test",
        ":flags_test",
        ":groups_test",
        ":optimization_test",
        ":quantifiers_test",
        ":root_import_test",
        ":ungreedy_opt_test",
        ":unicode_test",
        ":verbose_test",
    ],
)
