load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("//re/tests/benchmarks:benchmark_test.bzl", "benchmark_test")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "benchmarks",
    srcs = ["benchmarks.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//re:re",
    ],
)

bzl_library(
    name = "benchmark_test_lib",
    srcs = ["benchmark_test.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":benchmarks",
        "@bazel_skylib//lib:unittest",
    ],
)

benchmark_test(
    name = "benchmark_test",
)
