load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//re/tests/benchmarks:benchmark_test.bzl", "benchmark_test")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "benchmarks",
    srcs = ["benchmarks.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//re",
    ],
)

benchmark_test(
    name = "benchmark_test",
)
